--- a/BackEnd/requirements.txt
+++ b/BackEnd/requirements.txt
@@ -101,4 +101,132 @@ vcrpy==7.0.0
 wcwidth==0.2.13
 wrapt==1.17.2
 yarl==1.20.1
+zstandard==0.23.0aiohappyeyeballs==2.6.1
+aiohttp==3.12.14
+aiohttp-retry==2.9.1
+aiosignal==1.4.0
+annotated-types==0.7.0
+anyio==4.9.0
+async-timeout==4.0.3
+attrs==25.3.0
+bnlp_toolkit==4.0.3
+certifi==2025.7.14
+cffi==1.17.1
+charset-normalizer==3.4.2
+click==8.2.1
+colorama==0.4.6
+coloredlogs==15.0.1
+dataclasses-json==0.6.7
+distro==1.9.0
+emoji==1.7.0
+exceptiongroup==1.3.0
+fastembed==0.7.1
+filelock==3.18.0
+flatbuffers==25.2.10
+frozenlist==1.7.0
+fsspec==2025.7.0
+ftfy==6.2.0
+gensim==4.3.2
+googleapis-common-protos==1.70.0
+greenlet==3.2.3
+grpcio==1.73.1
+h11==0.16.0
+h2==4.2.0
+hpack==4.1.0
+httpcore==1.0.9
+httpx==0.28.1
+httpx-sse==0.4.1
+huggingface-hub==0.33.4
+humanfriendly==10.0
+hyperframe==6.1.0
+idna==3.10
+iniconfig==2.1.0
+jiter==0.10.0
+joblib==1.5.1
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.3.27
+langchain-community==0.3.27
+langchain-core==0.3.72
+langchain-experimental==0.3.4
+langchain-openai==0.3.28
+langchain-pinecone==0.2.11
+langchain-qdrant==0.2.0
+langchain-tests==0.3.20
+langchain-text-splitters==0.3.9
+langsmith==0.4.8
+loguru==0.7.3
+lz4==4.4.4
+markdown-it-py==3.0.0
+marshmallow==3.26.1
+mdurl==0.1.2
+mmh3==5.1.0
+mpmath==1.3.0
+multidict==6.6.3
+mypy_extensions==1.1.0
+nltk==3.9.1
+numpy==1.26.4
+onnxruntime==1.22.1
+openai==1.97.1
+orjson==3.11.0
+packaging==24.2
+pillow==11.3.0
+pinecone==7.3.0
+pinecone-plugin-assistant==1.7.0
+pinecone-plugin-interface==0.0.7
+pluggy==1.6.0
+portalocker==3.2.0
+propcache==0.3.2
+protobuf==5.29.5
+protoc-gen-openapiv2==0.0.1
+py-cpuinfo==9.0.0
+py_rust_stemmers==0.1.5
+pycparser==2.22
+pydantic==2.11.7
+pydantic-settings==2.10.1
+pydantic_core==2.33.2
+Pygments==2.19.2
+PyMuPDF==1.26.3
+pypdf==5.8.0
+pyreadline3==3.5.4
+pytest==8.4.1
+pytest-asyncio==0.26.0
+pytest-benchmark==5.1.0
+pytest-codspeed==4.0.0
+pytest-recording==0.13.4
+pytest-socket==0.7.0
+python-crfsuite==0.9.11
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+pywin32==311
+PyYAML==6.0.2
+qdrant-client==1.15.0
+regex==2024.11.6
+requests==2.32.4
+requests-toolbelt==1.0.0
+rich==14.0.0
+scipy==1.10.1
+sentencepiece==0.2.0
+six==1.17.0
+sklearn-crfsuite==0.3.6
+smart_open==7.3.0.post1
+sniffio==1.3.1
+SQLAlchemy==2.0.41
+sympy==1.14.0
+syrupy==4.9.1
+tabulate==0.9.0
+tenacity==9.1.2
+tiktoken==0.9.0
+tokenizers==0.21.2
+tomli==2.2.1
+tqdm==4.66.3
+typing-inspect==0.9.0
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+urllib3==2.5.0
+vcrpy==7.0.0
+wcwidth==0.2.13
+win32_setctime==1.2.0
+wrapt==1.17.2
+yarl==1.20.1
 zstandard==0.23.0
