--- a/requirements.txt
+++ b/requirements.txt
@@ -18,9 +18,14 @@ coloredlogs==15.0.1
 cryptography==45.0.5
 dataclasses-json==0.6.7
 distro==1.9.0
+dnspython==2.7.0
 einops==0.8.1
+email_validator==2.2.0
 emoji==1.7.0
 exceptiongroup==1.3.0
+fastapi==0.116.1
+fastapi-cli==0.0.8
+fastapi-cloud-cli==0.1.4
 fastembed==0.7.1
 filelock==3.18.0
 flatbuffers==25.2.10
@@ -35,6 +40,7 @@ h11==0.16.0
 h2==4.2.0
 hpack==4.1.0
 httpcore==1.0.9
+httptools==0.6.4
 httpx==0.28.1
 httpx-sse==0.4.1
 huggingface-hub==0.34.1
@@ -108,6 +114,7 @@ pytest-socket==0.7.0
 python-crfsuite==0.9.11
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
+python-multipart==0.0.20
 pytz==2025.2
 pywin32==311
 PyYAML==6.0.2
@@ -116,15 +123,20 @@ regex==2024.11.6
 requests==2.32.4
 requests-toolbelt==1.0.0
 rich==14.0.0
+rich-toolkit==0.14.8
+rignore==0.6.4
 safetensors==0.5.3
 scikit-learn==1.7.1
 scipy==1.10.1
 sentencepiece==0.2.0
+sentry-sdk==2.33.2
+shellingham==1.5.4
 six==1.17.0
 sklearn-crfsuite==0.3.6
 smart_open==7.3.0.post1
 sniffio==1.3.1
 SQLAlchemy==2.0.41
+starlette==0.47.2
 sympy==1.14.0
 syrupy==4.9.1
 tabulate==0.9.0
@@ -137,13 +149,17 @@ torch==2.7.1
 torchvision==0.22.1
 tqdm==4.66.3
 transformers==4.54.0
+typer==0.16.0
 typing-inspect==0.9.0
 typing-inspection==0.4.1
 typing_extensions==4.14.1
 tzdata==2025.2
 urllib3==2.5.0
+uvicorn==0.35.0
 vcrpy==7.0.0
+watchfiles==1.1.0
 wcwidth==0.2.13
+websockets==15.0.1
 win32_setctime==1.2.0
 wrapt==1.17.2
 yarl==1.20.1
